EFRS-1366: apply agent patch